# TechnicalAIAssessment-SRE

./: .gitignore  CLAUDE.md  README.md  prompts.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
agent/: .env.example  README.md  agent.py  example.csv  pyproject.toml  repsonse-example.txt  requirements.txt
agent/cost_analyst/: __init__.py  agent_factory.py  config.py  models.py  persona.py
agent/cost_analyst/tools/: __init__.py  aws_cost_tools.py  kubernetes_read_tools.py  prometheus_tools.py
agent/examples/: example_costs.csv
agent/tests/: conftest.py  test_aws_cost_tools.py  test_config.py  test_csv_analysis.py  test_kubernetes_read_tools.py  test_prometheus_tools.py  test_readonly_guarantee.py
docs/: architecture-and-operations-proposal.md
specs/001-cost-analyst-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cost-analyst-agent/checklists/: requirements.md
specs/001-cost-analyst-agent/contracts/: cli-interface.md  tools.md
