[project]
name = "cost-analyst-agent"
version = "0.1.0"
description = "Cost Analyst Agent — agno + OpenAI, read-only CLI"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.0",
    "openai>=1.50",
    "boto3>=1.34",
    "kubernetes>=29.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
